# func-py-with-poetry

./: .gitignore  README.md  pyproject.toml  test.http
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yml
infra/: func-py-with-poetry.bicep
